Fix footer overlapping with the content on tall pages
Conflicts:
	pootle/static/css/style.css

--- a/pootle/static/css/style.css
+++ b/pootle/static/css/style.css
@@ -782,7 +782,7 @@ button.close
 #body
 {
     margin: 0;
-    padding: 5px 0px;
+    padding: 1px 0 3em;
 }
 
 #body:after
